--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@circle-fin/w3s-pw-web-sdk": "^1.1.1",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@fontsource/roboto": "^5.0.13",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -17,13 +22,19 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@monaco-editor/react": "^4.6.0",
+    "@mui/lab": "^5.0.0-alpha.173",
+    "@mui/material": "^5.16.5",
     "@react-three/fiber": "^8.16.2",
+    "@types/jwt-decode": "^3.1.0",
     "@types/react-dnd": "^3.0.2",
     "@types/react-dnd-html5-backend": "^3.0.2",
-    "axios": "^1.6.8",
+    "@types/styled-components": "^5.1.34",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "codemirror": "^5.65.16",
+    "dotenv": "^16.4.5",
     "js-interpreter": "^5.1.1",
+    "jwt-decode": "^4.0.0",
     "mathjs": "^12.4.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
@@ -38,9 +49,11 @@
     "react-spring": "^9.7.3",
     "react-syntax-highlighter": "^15.5.0",
     "react-three-fiber": "^6.0.13",
+    "styled-components": "^6.1.12",
     "swiper": "^11.1.1",
     "three": "^0.164.1",
-    "vite": "^5.2.11"
+    "vite": "^5.2.11",
+    "vite-plugin-node-polyfills": "^0.22.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -54,6 +67,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "sass": "^1.77.0",
     "typescript": "^5.2.2"
   },
